fix: suppression du overflow scroll sur chat room et calucle de la taille de conversation

--- a/styles/components/Layouts.module.css
+++ b/styles/components/Layouts.module.css
@@ -40,7 +40,7 @@
 .chatRoom {
   position: fixed;
   right: 0;
-  overflow: scroll;
+  z-index: 5;
   height: 100%;
   width: 450px;
   margin-left: auto;
@@ -54,7 +54,7 @@
 }
 
 .conversations {
-  height: 100%;
+  height: calc(100% - 68px);
   overflow: scroll;
   background-color: theme('colors.bleu_blanc');
 }
